--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <div class="file-upload-content">
     <img class="file-upload-image" src="#" alt="your image" />
     <div class="image-title-wrap">
+      <div>cambios necesarios</div>
       <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
+      <div>cambios necesarios</div>
     </div>
   </div>
 </div>
